--- a/Uarrivo.html
+++ b/Uarrivo.html
@@ -125,7 +125,7 @@
 											<p>
                                                 Uarrivo was created in a team of three at the American University in Cairo. We utilized C++, and Qt to create this
                                                 application. To create the application we first started with the object oriented design. After designing the application 
-                                                we distributed the different features of the program amongst ourselves and successfully implemented the 
+                                                we distributed the different features of the program amongst ourselves and successfully implemented the design.
                                             </p>
 										
 										</div>
