--- a/MonsterIsland.html
+++ b/MonsterIsland.html
@@ -47,7 +47,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/Monster1.png" alt="" />
+								<img src="Monster1.PNG" alt="" />
 							</span>
 							<header class="major">
 								<h1>Monster Island</h1>
