--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/Monster1.png" alt="" />
+										<img src="images/Monster1.PNG" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="MonsterIsland.html" class="link">Monster Island</a></h3>
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/CarrotEscapeMainPic.png" alt="" />
+										<img src="images/CarrotEscapeMainPic.PNG" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="CarrotEscape.html" class="link">Carrot Escape</a></h3>
