added picture and link of iOS app

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/Monster1.PNG" alt="" />
+										<img src="images/ios_pic.JPG" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="MonsterIsland.html" class="link">Monster Island</a></h3>
+										<h3><a href="https://docs.google.com/presentation/d/1ntG-dma1zUI4KcmyoYrcp64caZChffmi/edit?usp=sharing&ouid=100072998497613050239&rtpof=true&sd=true" class="link">iOS Clothing Application Banque Misr</a></h3>
 										
 									</header>
 								</article>
