moved ios app pic outside of images folder

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/ios_pic.JPG" alt="" />
+										<img src="ios_pic.JPG" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://docs.google.com/presentation/d/1ntG-dma1zUI4KcmyoYrcp64caZChffmi/edit?usp=sharing&ouid=100072998497613050239&rtpof=true&sd=true" class="link">iOS Clothing Application Banque Misr</a></h3>
